--- a/2-modules/personal/4.babel/package.json
+++ b/2-modules/personal/4.babel/package.json
@@ -1,12 +1,12 @@
 {
   "name": "4.babel",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "description": ""
 }
