--- a/5-model/personal/todo-app-node/package.json
+++ b/5-model/personal/todo-app-node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app-node",
+  "name": "todo-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
